--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <HTML>
 <HEAD>
-<TITLE>»yªk´ú¸Õª©</TITLE>
+<TITLE>æš«æ™‚é—œé–‰æ¶ˆæ¯</TITLE>
 </HEAD>
 <BODY>
 
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">«¢Åo¤j®a¦n</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">å“ˆå›‰å¤§å®¶å¥½</span></span></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -16,7 +16,7 @@
 <p>&nbsp;</p>
 <p><a title="IP" href="MCGA.GA">MCGA.GA</a></p>
 
-¦øªA¾¹¼È®ÉÃö³¬
+ä¼ºæœå™¨æš«æ™‚é—œé–‰
 
 
 </BODY>
