--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,34 @@
 <HTML>
 <HEAD>
-<TITLE>»yªk´ú¸Õª©</TITLE>
+<TITLE>ä¼ºæœå™¨æš«æ™‚é—œé–‰é€šçŸ¥</TITLE>
 </HEAD>
 <BODY>
 
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">«¢Åo¤j®a¦n</span></span></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">å“ˆå›‰å¤§å®¶å¥½</span></span></p>
 <p>&nbsp;</p>
 <p><a title="IP" href="MCGA.GA">MCGA.GA</a></p>
 
-¦øªA¾¹¼È®ÉÃö³¬
+ä¼ºæœå™¨æš«æ™‚é—œé–‰
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<a href="https://time.is/Taipei" id="time_is_link" rel="nofollow" style="font-size:15px">ç›®å‰çš„æ™‚é–“:</a>
+<span id="Taipei_z43f" style="font-size:20px"></span>
+<script src="//widget.time.is/t.js"></script>
+<script>
+time_is_widget.init({Taipei_z43f:{}});
+</script>
+
 
 
 </BODY>
