--- a/index.htm
+++ b/index.htm
@@ -1,43 +1,17 @@
-<HTML>
-<HEAD>
-<<<<<<< HEAD
-<TITLE>伺服器暫時關閉通知</TITLE>
-=======
-<TITLE>暫時關閉消息</TITLE>
->>>>>>> d3be98918b717273fe4e5bae2b71a09a6a61774d
-</HEAD>
-<BODY>
+<html>
+<head>
+<title></title>
+</head>
+<body>
+<h1><span style="color: #ff0000;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; MCGA.ga</span></h1>
+<h1><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;伺服器暫時關閉</strong></h1>
 
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">哈囉大家好</span></span></p>
-<p>&nbsp;</p>
-<p><a title="IP" href="MCGA.GA">MCGA.GA</a></p>
-
-伺服器暫時關閉
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<a href="https://time.is/Taipei" id="time_is_link" rel="nofollow" style="font-size:15px">目前的時間:</a>
-<span id="Taipei_z43f" style="font-size:20px"></span>
+<a href="https://time.is/Taipei" id="time_is_link" rel="nofollow" style="font-size:36px">&nbsp; &nbsp; 台灣目前時間:</a>
+<span id="Taipei_z43f" style="font-size:36px"></span>
 <script src="//widget.time.is/t.js"></script>
 <script>
 time_is_widget.init({Taipei_z43f:{}});
 </script>
 
-<<<<<<< HEAD
-=======
-伺服器暫時關閉
->>>>>>> d3be98918b717273fe4e5bae2b71a09a6a61774d
-
-
-</BODY>
-</HTML>
+</body>
+</html>
