--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>伺服器關閉通知MCGAGA</title>
 </head>
 <body>
 <h1><span style="color: #ff0000;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; MCGA.ga</span></h1>
