--- a/index.html
+++ b/index.html
@@ -1,36 +1,19 @@
 <html>
 <head>
-<title>伺服器關閉通知MCGAGA</title>
+<title>明璟的網站OWO</title>
 </head>
 <body bgcolor="#FFFFFF">
         <hr>
         <font face="微軟正黑體"> 
 	<center>
-	<font size=+100><font color="#ff0000">MCGAGA</font></font>
+	<font size=+100><font color="#ff0000">施工中......</font></font>
 	<br>
 	<br/>
 	<br>
 	<br/>
 	<br>
 	<br/>
-	<br><marquee width="750"><font size=+100>注意!!! MCGAGA暫時關閉 再次開放時間未定&nbsp;&nbsp;&nbsp;&nbsp;<font/></marquee>
-
-	<br/>
-	<br>
-	<br/>
-	<br>
-	<br/>
-	<br>
-	<br/>
-	<br>
-	<br/>
-	<br>
-	<br/>
-	<br>
-	<br/>
-	<br><table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;"><tr style=""><td height="28" style="line-height:28px;">&nbsp;</td></tr><tr><td style=""><table border="0" width="280" cellspacing="0" cellpadding="0" style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto;"><tr style="padding-bottom: 8px;"><td style=""><img class="img" src="https://scontent.frmq1-1.fna.fbcdn.net/v/t1.0-0/q92/c0.0.567.296/p526x296/37822426_427202184430845_3499887318146220032_o.jpg?_nc_cat=108&amp;_nc_ht=scontent.frmq1-1.fna&amp;oh=a27eb198352ac892e1fa67cf2fd08760&amp;oe=5C453AE5" width="280" height="146" alt="" /></td></tr><tr><td style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">McGaGa Network</td></tr><tr><td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">Facebook 社團 · 4 位成員</td></tr><tr><td style="padding:8px 12px 12px 12px;"><tab         le border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;width:100%;"><tr><td style="background-color:#4267b2;border-radius:3px;text-align:center;"><a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;" href="https://www.facebook.com/plugins/group/join/popup/?group_id=2040826169516248&amp;source=email_campaign_plugin" target="_blank" rel="noopener"><table border="0" cellspacing="0" cellpadding="3" align="center" style="border-collapse:collapse;"><tr><td style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;"><img width="16" src="https://facebook.com/images/groups/plugin/email/app_fb_32_fig_white.png" /></td><td style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">加入社團</td></tr></table></a></td></tr></table></td></tr></table></td></tr><tr style=""><td height="14" style="line-height:14px;">&nbsp;</td></tr></table>
-	<br/>
-	<br>▲加入我們的FB社團▲
+	<br><h3>網站尚未完工 </h3>
 	<br/>
 	<br>
 	<br/>
@@ -50,13 +33,23 @@
 	<br/>
 	<br>
 	<br/>
-	<br><a href="https://time.is/Taichung" id="time_is_link" rel="nofollow" style="font-size:36px">目前的時間:</a>
-<span id="Taichung_z43f" style="font-size:36px"></span>
-<script src="//widget.time.is/zh_tw.js"></script>
-<script>
-time_is_widget.init({Taichung_z43f:{template:"TIME<br>DATE<br>SUN", date_format:"year-monthnum-daynum dayname, 第week周", sun_format:"日出: srhour:srminute 日落: sshour:ssminute<br>白天長度: dlhours小時 dlminutes分", coords:"24.1469000,120.6839000"}});
-</script>
-
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
+	<br/>
+	<br>
 	<br/>
 	<br>
 	<br/>
