--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<font size=+100><font color="#ff0000">施工中......</font></font>
 	<br>
 	<br/>
-	<br>
+	<br>明璟太棒了
 	<br/>
 	<br>
 	<br/>
@@ -49,7 +49,7 @@
 	<br/>
 	<br>
 	<br/>
-	<br>
+	<br>朋友遊戲
 	<br/>
 	<br>
 	<br/>
