--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <link href='style.css' rel='stylesheet' > 
 <head>
 <title>menu</title>
@@ -15,9 +15,9 @@
 </li>
 </ul>
 </li>
-<li><a><font color="##f0f0f0">尚未設置</font></a></li>
-<li><a><font color="##f0f0f0">尚未設置</font></a></li>
-<li><a><font color="##f0f0f0">尚未設置</font></a></li>
+<li><a><font color="##f0f0f0">未設置</font></a></li>
+<li><a><font color="##f0f0f0">未設置</font></a></li>
+<li><a><font color="##f0f0f0">未設置</font></a></li>
 <ul>
 </div>
 </body>
