--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </li>
 <li><a><font color="##f0f0f0">未設置</font></a></li>
 <ul>
+</div id="menu">
+<div id="oo"><div>
+<div id="foot">
 </div>
 </body>
 </html>
