--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>menu</title>
 </head>
 <body>
-<p align="left"><font size=150> <font color= 'white'> <font face='fantasy'>&nbsp; &nbsp;MAKING... </font> </p>	
+<div id="img1">
+<img src="44444.png">
+</div>	
 <div id="menu">
 <ul>
 <li><a><font color="##f0f0f0">首頁</font></a></li>
