--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </div>	
 <div id="menu">
 <ul>
-<li style="margin-bottom:20px"><a><font color="##f0f0f0">首頁</font></a></li>
-<li style="margin-bottom:20px"><a><font color="#f0f0f0">關於</font></a>
+<li><a><font color="##f0f0f0">首頁</font></a></li>
+<li><a><font color="#f0f0f0">關於</font></a>
 <ul>
 <li>
 <a><font color="#f0f0f0">姓名</font></a>
 </li>
 </ul>
 </li>
-<li style="margin-bottom:20px"><a><font color="##f0f0f0">未設置</font></a></li>
+<li><a><font color="##f0f0f0">未設置</font></a></li>
 <ul>
 </div id="menu">
 <div id="oo"><div>
