--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <div id="img1">
-<A HREF=www.mcga.ga><img src="44444.png"><A>
+<A HREF=https://www.mcga.ga><img src="44444.png"><A>
 </div>	
 <div id="menu">
 <ul>
-<li><A HREF=www.mcga.ga><font color="##f0f0f0">首頁</font></a></li>
+<li><A HREF=https://www.mcga.ga><font color="##f0f0f0">首頁</font></a></li>
 <li><a><font color="#f0f0f0">關於</font></a>
 <ul>
 <li>
