--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <title>menu</title>
 </head>
 <body>
+<div id="wrapper">
+<div id="din">
 <div id="img1">
 <A HREF=https://www.mcga.ga><img src="44444.png"><A>
-</div>	
+</div>
 <div id="menu">
 <ul>
 <li><A HREF=https://www.mcga.ga><font color="##f0f0f0">首頁</font></a></li>
@@ -19,9 +21,11 @@
 </li>
 <li><a><font color="##f0f0f0">未設置</font></a></li>
 <ul>
-</div id="menu">
-<div id="oo"><div>
-<div id="foot">
+</div>
+</div>
+</div>
+<div id="oo">551001451</div>
+<div id="foot">https://www.mcga.ga All rights reserved
 </div>
 </body>
 </html>
