--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </div>
 </div>
 </div>
-<div id="oo">551001451</div>
-<div id="foot">https://www.mcga.ga All rights reserved
+<div id="oo"><font size="300"> 就快好了 相信明璟</font></div>
+<div id="foot"><p>https://www.mcga.ga All rights reserved</p>
 </div>
 </body>
 </html>
