--- a/index.html
+++ b/index.html
@@ -1,31 +1,154 @@
+<!DOCTYPE HTML>
+<!--
+	Phase Shift by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<link href='style.css' rel='stylesheet' > 
-<head>
-<title>menu</title>
-</head>
-<body>
-<div id="wrapper">
-<div id="din">
-<div id="img1">
-<A HREF=https://www.mcga.ga><img src="44444.png"><A>
-</div>
-<div id="menu">
-<ul>
-<li><A HREF=https://www.mcga.ga><font color="##f0f0f0">首頁</font></a></li>
-<li><a><font color="#f0f0f0">關於</font></a>
-<ul>
-<li>
-<a><font color="#f0f0f0">姓名</font></a>
-</li>
-</ul>
-</li>
-<li><a><font color="##f0f0f0">未設置</font></a></li>
-<ul>
-</div>
-</div>
-</div>
-<div id="oo"><font size="300"> 就快好了 相信明璟</font></div>
-<div id="foot"><p>https://www.mcga.ga All rights reserved</p>
-</div>
-</body>
+	<head>
+		<title>0</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Wrapper -->
+			<div class="wrapper style1">
+
+				<!-- Header -->
+					<div id="header" class="skel-panels-fixed">
+						<div id="logo">
+							<h1><a href="index.html"<a href="www.mcga.ga"><img src="images/V621LOGO.png" width="100" height="100"></a></a></h1>
+							<span class="tag">by TEMPLATED</span>
+						</div>
+						<nav id="nav">
+							<ul>
+								<li class="active"><a href="index.html">首頁</a></li>
+								<li><a href="left-sidebar.html">遊戲規定</a></li>
+							</ul>
+						</nav>
+					</div>
+
+				<!-- Banner -->
+					<div id="banner" class="container">
+						<section>
+						    <p></p>
+							<p><strong>一個有趣的Minecraft 伺服器</strong></p>
+							<a href="#" class="button medium">MCGA.GA</a>
+							<p>現在加入</p>
+						</section>
+					</div>
+
+				<!-- Extra -->
+					<div id="extra">
+						<div class="container">
+							<div class="row no-collapse-1">
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic02.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic03.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+							</div>
+							<div class="row no-collapse-1">
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic02.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+								<section class="4u"> <a href="#" class="image featured"><img src="images/pic03.jpg" alt=""></a>
+									<div class="box">
+										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
+										<a href="#" class="button">Read More</a> </div>
+								</section>
+							</div>
+						</div>
+					</div>
+
+				<!-- Main -->
+					<div id="main">
+						<div class="container">
+							<div class="row"> 
+								
+								<!-- Content -->
+								<div class="6u">
+									<section>
+										<ul class="style">
+											<li class="fa fa-wrench">
+												<h3>Integer ultrices</h3>
+												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
+											<li class="fa fa-leaf">
+												<h3>Aliquam luctus</h3>
+												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
+										</ul>
+									</section>
+								</div>
+								<div class="6u">
+									<section>
+										<ul class="style">
+											<li class="fa fa-cogs">
+												<h3>Integer ultrices</h3>
+												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
+											<li class="fa fa-road">
+												<h3>Aliquam luctus</h3>
+												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
+										</ul>
+									</section>
+								</div>
+							</div>
+						</div>
+					</div>
+
+	</div>
+
+	<!-- Footer -->
+		<div id="footer" class="wrapper style2">	
+						</div>
+					</form>
+				</section>
+			</div>
+		</div>
+
+	<!-- Copyright -->
+		<div id="copyright">
+			<div class="container">
+				<div class="copyright">
+					<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
+					<ul class="icons">
+						<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
+						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+						<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+	</body>
 </html>
