--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<title>0</title>
+		<meta name="description" content="MCGA歡迎您!">
+        <meta name="keywords" content="Mineraft伺服器,Bedwars Server,起床戰爭伺服器,床戰伺服器,台灣Minecraft 伺服器,Minecraft server in taiwan">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -56,6 +58,7 @@
 				<!-- Main -->
 
 	</div>
+	
 
 	<!-- Footer -->
 		<div id="footer" class="wrapper style2">	
@@ -71,7 +74,7 @@
 				<div class="copyright">
 					<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
 					<ul class="icons">
-						<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
+						<li><a href="https://www.facebook.com/groups/MCGAGA/" class="fa fa-facebook"><span>Facebook</span></a></li>
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
 						<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
 					</ul>
