--- a/res.html
+++ b/res.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-<!--
+<html xmlns="http://www.w3.org/1999/xhtml"><head><!--
 
 Design by TEMPLATED
 
@@ -21,10 +20,11 @@ Released   : 20140309
 
 
 -->
+
+
   
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>
-  </title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title></title>
+  
 
   
   <meta name="keywords" content="" />
@@ -42,10 +42,7 @@ Released   : 20140309
   <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
   
-  <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
-</head><body>
+  <link rel="stylesheet" href="css/font-awesome.min.css" /><!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]--></head><body>
 <div id="wrapper">
 <div id="header-wrapper">
 <div id="header" class="container">
@@ -54,7 +51,7 @@ Released   : 20140309
 </div>
 <div id="menu">
 <ul>
-  <li><a href="index.html" accesskey="1" title="">首頁</a></li>
+  <li><a href="#" accesskey="1" title="">首頁</a></li>
   <li class="current_page_item"><a href="#" accesskey="2" title="">領地教學</a></li>
   <li><a href="#" accesskey="3" title="">About Us</a></li>
   <li><a href="#" accesskey="4" title="">Careers</a></li>
@@ -66,42 +63,102 @@ Released   : 20140309
 <br />
 <div id="extra" class="container">
 <div class="title">
-<h2>創建領地 其實超級EZ<br />
+<h2>贊助我們 讓伺服器更好<br />
 </h2>
-敲敲點點 花點錢 創建完成<span class="byline"> </span></div>
-<div id="three-column">
-<div class="boxA">
-<div class="box"> <img alt="" src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/a/a7/Wooden_Hoe_Revision_2.png" /><br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<p>1 拿出木鋤</p>
-<br />
-<p><br />
-</p>
-</div>
-</div>
-<div class="boxB">
-<div class="box"><br />
-<p><img style="width: 250px; height: 202px;" alt="" src="%E6%9C%AA%E5%91%BD%E5%90%8D.png" /></p>
-<p>2.用木鋤敲領地對角點</p>
-<p>左鍵敲1 右鍵敲2 可對調<br />
-</p>
-<p><br />
-</p>
-</div>
-</div>
-</div>
+風風雨雨&nbsp; 有你真好 <span class="byline"> </span></div><br />
 <div class="boxC">
-<div class="box"> <br />
-<p><img style="width: 323px; height: 110px;" alt="" src="%E6%93%B7%E5%8F%96.PNG" /></p>
-<p>3.打/res create [領地名]</p>
-<p>成功創建領地<br />
+<div class="box"> <span class="fa fa-facebook"><br />
+</span>
+<table style="text-align: left; width: 901px; height: 237px;" border="1" cellpadding="2" cellspacing="2">
+  <tbody>
+    <tr>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;">VIP<br />
+      </td>
+      <td style="vertical-align: top;">VIP+<br />
+      </td>
+      <td style="vertical-align: top;">MVP<br />
+      </td>
+      <td style="vertical-align: top;">MVP+<br />
+      </td>
+      <td style="vertical-align: top;">MVP++<br />
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">大廳飛行<br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">NICK<br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">RANK<br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">粒子效果<br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">神秘箱<br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+      <td style="vertical-align: top;"><br />
+      </td>
+    </tr>
+  </tbody>
+</table>
+<span class="fa fa-facebook">
+<p><br />
 </p>
 </span></div>
 </div>
