--- a/res.html
+++ b/res.html
@@ -63,104 +63,38 @@ Released   : 20140309
 <br />
 <div id="extra" class="container">
 <div class="title">
-<h2>贊助我們 讓伺服器更好<br />
+<h2>創建領地 其實超級EZ<br />
 </h2>
-風風雨雨&nbsp; 有你真好 <span class="byline"> </span></div><br />
-<div class="boxC">
-<div class="box"> <span class="fa fa-facebook"><br />
-</span>
-<table style="text-align: left; width: 901px; height: 237px;" border="1" cellpadding="2" cellspacing="2">
-  <tbody>
-    <tr>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;">VIP<br />
-      </td>
-      <td style="vertical-align: top;">VIP+<br />
-      </td>
-      <td style="vertical-align: top;">MVP<br />
-      </td>
-      <td style="vertical-align: top;">MVP+<br />
-      </td>
-      <td style="vertical-align: top;">MVP++<br />
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">大廳飛行<br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">NICK<br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">RANK<br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">粒子效果<br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">神秘箱<br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-      <td style="vertical-align: top;"><br />
-      </td>
-    </tr>
-  </tbody>
-</table>
-<span class="fa fa-facebook">
-<p><br />
+敲敲點點 花點錢 創建完成<span class="byline"> </span></div>
+<div id="three-column">
+<div class="boxA">
+<div class="box"> <img alt="" src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/a/a7/Wooden_Hoe_Revision_2.png" /><br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<p>1 拿出木鋤</p>
+</div>
+</div>
+<div class="boxB">
+<div class="box"><br />
+<p><img style="width: 250px; height: 202px;" alt="" src="%E6%9C%AA%E5%91%BD%E5%90%8D.png" /></p>
+<p>2.用木鋤敲領地對角點</p>
+<p>左鍵敲1 右鍵敲2 可對調<br />
 </p>
-</span></div>
+</div>
+</div>
+</div>
+<div class="boxC">
+<div class="box">
+<p><img style="width: 323px; height: 110px;" alt="" src="%E6%93%B7%E5%8F%96.PNG" /></p>
+<p>3.打/res create [領地名]</p>
+<p>成功創建領地<br />
+</p>
+
+</div>
 </div>
 </div>
 </div>
