--- a/res.html
+++ b/res.html
@@ -51,7 +51,7 @@ Released   : 20140309
 </div>
 <div id="menu">
 <ul>
-  <li><a href="#" accesskey="1" title="">首頁</a></li>
+  <li><a href="index.html/" accesskey="1" title="">首頁</a></li>
   <li class="current_page_item"><a href="#" accesskey="2" title="">領地教學</a></li>
   <li><a href="#" accesskey="3" title="">About Us</a></li>
   <li><a href="#" accesskey="4" title="">Careers</a></li>
